[gd_scene load_steps=4 format=2]

[ext_resource path="res://master/scenes/in-game_HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://master/scripts/main.gd" type="Script" id=2]
[ext_resource path="res://mini/ragdoll/scenes/ragdoll.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Ragdoll = ExtResource( 3 )

[node name="InGameHUD" parent="." instance=ExtResource( 1 )]

[node name="GameTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
